exports[`ContextBox renders bottom 1`] = `
<div
  className="ax-context-box ax-context-box--bottom ax-context-box--padded"
  style={
    Object {
      "width": "14.5rem",
    }
  }>
  Lorem ipsum
  <span
    className="ax-context-box__arrow" />
</div>
`;

exports[`ContextBox renders custom width 1`] = `
<div
  className="ax-context-box ax-context-box--top ax-context-box--padded"
  style={
    Object {
      "width": "20rem",
    }
  }>
  Lorem ipsum
  <span
    className="ax-context-box__arrow" />
</div>
`;

exports[`ContextBox renders left 1`] = `
<div
  className="ax-context-box ax-context-box--left ax-context-box--padded"
  style={
    Object {
      "width": "14.5rem",
    }
  }>
  Lorem ipsum
  <span
    className="ax-context-box__arrow" />
</div>
`;

exports[`ContextBox renders right 1`] = `
<div
  className="ax-context-box ax-context-box--right ax-context-box--padded"
  style={
    Object {
      "width": "14.5rem",
    }
  }>
  Lorem ipsum
  <span
    className="ax-context-box__arrow" />
</div>
`;

exports[`ContextBox renders top 1`] = `
<div
  className="ax-context-box ax-context-box--top ax-context-box--padded"
  style={
    Object {
      "width": "14.5rem",
    }
  }>
  Lorem ipsum
  <span
    className="ax-context-box__arrow" />
</div>
`;

exports[`ContextBox renders unpadded 1`] = `
<div
  className="ax-context-box ax-context-box--top"
  style={
    Object {
      "width": "14.5rem",
    }
  }>
  Lorem ipsum
  <span
    className="ax-context-box__arrow" />
</div>
`;

exports[`ContextBox renders with defaultProps 1`] = `
<div
  className="ax-context-box ax-context-box--top ax-context-box--padded"
  style={
    Object {
      "width": "14.5rem",
    }
  }>
  Lorem ipsum
  <span
    className="ax-context-box__arrow" />
</div>
`;
